# ericauth

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN_DOC.md  IMPLEMENTATION_PLAN.md  Makefile  README.md
.github/: dependabot.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  deploy.yml  rust-ci.yml
cdk/: README.md  cdk.context.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
cdk/lib/: cdk-stack.ts  oidc-stack.ts
cdk/lib/constructs/: api.ts  constants.ts  database.ts  lambda.ts
cdk/test/: cdk.test.ts
docs/: ci-cd-architecture.md
docs/plans/: 2026-02-14-comprehensive-refactor-design.md  2026-02-14-maximal-auth-platform-implementation-plan.md  2026-02-14-maximal-auth-platform-roadmap-design.md  2026-02-14-token-introspection-design.md  2026-02-14-token-introspection.md
examples/: generate_keys.rs
src/: admin_rbac.rs  audit.rs  authz.rs  client_auth.rs  client_credentials.rs  config.rs  db.rs  encryption.rs  error.rs  jwt.rs  lib.rs  main.rs  mfa.rs  oauth.rs  password.rs  refresh_token.rs  saml.rs  session.rs  state.rs  templates.rs  user.rs  validation.rs  webauthn_config.rs
src/db/: api_key.rs  audit_event.rs  auth_code.rs  challenge.rs  client.rs  credential.rs  email_verification.rs  memory.rs  mod.rs  password_reset.rs  rate_limit.rs  refresh_token.rs  session.rs  tenant.rs  user.rs  users.rs
src/middleware/: admin_auth.rs  auth.rs  bearer.rs  csrf.rs  mod.rs  rate_limit.rs  security_headers.rs
src/routes/: account.rs  admin_pages.rs  admin_tenants.rs  api_keys.rs  audit_events.rs  authorize.rs  compliance.rs  consent.rs  events_webhook.rs  favicon.rs  forgot_password.rs  introspect.rs  jwks.rs  login.rs  login_page.rs  logout.rs  mfa.rs  mod.rs  openid_config.rs  passkey.rs  passkeys_page.rs  policy_simulate.rs  recover.rs  recover_page.rs  reset_password.rs  saml_metadata.rs  scim_auth.rs  scim_groups.rs  scim_users.rs  signup.rs  signup_page.rs  token.rs  token_revoke.rs  userinfo.rs  verify_email.rs
src/routes/user/: mod.rs
templates/: account.html  account_api_keys.html  account_compliance.html  account_password.html  account_sessions.html  admin_clients.html  admin_policies.html  admin_tenants.html  admin_users.html  base.html  consent.html  error.html  forgot_password.html  login.html  mfa_challenge.html  mfa_setup.html  passkeys.html  recover.html  recovery_codes.html  reset_password.html  signup.html
tests/: integration_test.rs
tests/e2e/: README.md  auth-ui.spec.ts  package.json  playwright.config.ts
tests/e2e/pages/: account.page.ts  index.ts  login.page.ts  passkeys.page.ts  recover.page.ts  recovery-codes.page.ts  signup.page.ts
tests/e2e/specs/: admin_console.spec.ts
tests/e2e/utils/: test-data.ts
