[package]
name = "ericauth"
version = "0.1.0"
edition = "2021"
authors = ["Eric Minassian <minassianeric2848@gmail.com>"]

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.62.0"
aws-sdk-secretsmanager = "1"
axum = "0.8"
base32 = "0.5.1"
chrono = { version = "0.4.39", features = ["serde"] }
form_urlencoded = "1"
http-body-util = "0.1"
getrandom = "0.3.1"
hex = "0.4.3"
lambda_http = "1"
rand = "0.10.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
url = "2"
uuid = { version = "1.13.1", features = ["v4", "v5", "fast-rng", "serde"] }
askama = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
urlencoding = "2"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }

[lints.rust]
unsafe_code = "forbid"
