[package]
name = "ericauth"
version = "0.1.0"
edition = "2021"
authors = ["Eric Minassian <minassianeric2848@gmail.com>"]

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-secretsmanager = "1"
axum = "0.8"
base32 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
form_urlencoded = "1"
http-body-util = "0.1"
getrandom = "0.3"
hex = "0.4"
lambda_http = "1"
rand = "0.10"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5", "fast-rng", "serde"] }
askama = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
urlencoding = "2"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
async-trait = "0.1.89"

[lints.rust]
unsafe_code = "forbid"

# [lints.clippy]
# unwrap_used = "warn"  # TODO: enable after converting test code to use expect()

[profile.release]
lto = true
codegen-units = 1
strip = true
